<resources>
    <string name="app_name">Tindogs</string>
    <string name="login_placeholder_email">Email</string>
    <string name="login_placeholder_password">Password</string>
    <string name="login_button_login_text">Log in</string>
    <string name="login_register_now">Don\'t you have an account yet? Register now!</string>
    <string name="login_button_register">Register</string>
    <string name="register_placeholder_first_name">Name</string>
    <string name="register_placeholder_last_name">Last Name</string>
    <string name="register_placeholder_phone">Phone</string>
    <string name="register_placeholder_mobile_phone">Mobile Phone</string>
    <string name="register_placeholder_email">Email</string>
    <string name="register_placeholder_user_name">User Name</string>
    <string name="register_placeholder_password">Password</string>
    <string name="register_button_save">Save</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_validation_user_not_blank">User cannot be empty</string>
    <string name="login_validation_password_not_blank">Password cannot be empty</string>
    <string name="register_placeholder_confirm_email">Confirm email</string>
    <string name="register_placeholder_confirm_password">Confirm password</string>
    <string name="register_validation_first_name">First name cannot be empty</string>
    <string name="register_validation_last_name">Last name cannot be empty</string>
    <string name="register_validation_email">Enter a valid email</string>
    <string name="register_validation_email_confirm">Emails are not equal</string>
    <string name="register_validation_password">Password must contain one upper case letter, one lower case letter, one number and the length must be between 8 and 16</string>
    <string name="register_validation_password_confirm">Pasword are not equal</string>
    <string name="sharedPerferencesFileName">com.appvenges.tindogs.network</string>
    <string name="sharedPreferencesToken">token</string>
    <string name="sharedPreferencesUserId">userId</string>
    <string name="needYourLocation">We need your location for show the dogs near to you</string>
    <string name="user_profile_user_image">User image</string>
    <string name="user_profile_settings">Settings</string>
    <string name="user_profile_edit_profile">Edit profile</string>
    <string name="dog_register_dog_name">Name</string>
    <string name="dog_register_dog_age">Age</string>
    <string name="dog_register_pure_breed">Pure breed</string>
    <string name="dog_register_dog_color">Color</string>
    <string name="dog_register_dog_description">Description</string>
    <string name="dog_register_dog_register">Register</string>
    <string name="dog_register_validation_name_empty">Dog name cannot be empty</string>
    <string name="dog_register_validation_age">Dog age must be between 0 and 30</string>
    <string name="dog_register_validation_desription_empty">Dog description cannot be empty</string>
    <string name="cell_list_dog_user_profile_dog_description">Dog description</string>
    <string name="user_image">User Image</string>
</resources>
