<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profile_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appvengers.tindogs.userProfile.UserProfileActivity">

    <ImageView
        android:id="@+id/user_profile_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/user_profile_user_image"
        android:src="@drawable/common_full_open_on_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_image"
        tools:text="Nombre Usuario" />

    <Button
        android:id="@+id/user_profile_settings_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_profile_settings"
        app:layout_constraintEnd_toStartOf="@+id/user_profile_edit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_name" />

    <Button
        android:id="@+id/user_profile_edit_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_profile_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_name"
        app:layout_constraintStart_toEndOf="@id/user_profile_settings_button"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_profile_dogs_list"
        android:layout_width="368dp"
        android:layout_height="313dp"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_edit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
